modules/wycs/tests/valid/test_set_39.wyal
assert:
    forall({int} xs, {int} ys, {int} zs):
        if:
            xs ⊆ ys
            xs ⊆ zs
        then:
            xs ⊆ ys ∩ zs 
