modules/wycs/tests/invalid/test_054.wyal
assert:
  forall ({int} xs, {int} ys, {int} zs):
    if:
       xs ⊆ ys
       zs ⊆ ys
    then:
       xs ⊆ zs